# b3dmar-auth-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
cookbooks/: api_platform.py  content_platform.py  minimal_admin.py  saas_multitenant.py  social_login.py
src/b3dmar_auth/: __init__.py  jwt.py  password.py  rate_limit.py  rbac.py  revocation.py  schemas.py  social.py  state.py
tests/: test_jwt.py  test_password.py  test_rbac.py  test_revocation.py  test_social.py  test_state.py
